--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react-geolocated": "^4.1.2",
     "react-image-gallery": "^1.3.0",
     "react-leaflet": "^4.2.1",
-    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "thee": "^1.1.2",
@@ -36,9 +35,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
