--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "craco": "^0.0.3",
     "exifreader": "^4.23.2",
     "express": "^4.19.2",
     "flowbite": "^2.3.0",
@@ -25,6 +26,7 @@
     "react-geolocated": "^4.1.2",
     "react-image-gallery": "^1.3.0",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "thee": "^1.1.2",
