--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gh-pages": "^6.1.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-geolocated": "^4.1.2",
     "react-image-gallery": "^1.3.0",
